--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
 nav {
     background-color: #333;
     width: 100%;
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     z-index: 999;
 }
@@ -176,7 +176,7 @@ header {
 nav {
     width: 100%;
     background-color: #333;
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     z-index: 999;
 }
