--- a/styles.css
+++ b/styles.css
@@ -914,12 +914,11 @@ nav ul {
         flex-direction: column; /* Arrange links vertically */
         align-items: center;
         background-color: #333;
-        padding: 10px 0;
         width: 100%;
     }
 
     nav ul li {
-        margin: 5px 0; /* Add spacing between links */
+        margin: 0px; /* Add spacing between links */
     }
 
     nav ul li a {
