--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,7 @@ nav ul li a:hover {
 /* Hero Section */
 .hero {
     position: relative;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('pexels-asadphoto-1024960.jpg') no-repeat center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('HomeImage.jpg') no-repeat center center/cover;
     height: 600px;
     color: white;
     display: flex;
